[package]
name = "nuban"
version = "1.0.0"
authors = ["Timothy Onyiuke <timothyonyiuke@gmail.com>"]
description = "A light weight crate for verifying account numbers based on NUBAN guidelines"
license = "MIT"
keywords = ["banks", "nuban", "cbn", "validator", "nigeria"]
edition = "2018"
repository = "timolinn/nuban"

[badges]
travis-ci = { repository = "timolinn/nuban" }